--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -14,6 +15,9 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.3.2",
+    "@prismicio/react": "^2.7.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -23,5 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.2",
+    "slice-machine-ui": "^1.4.0"
   }
 }
